# metu-ceng

./: README.md
ceng213/hw3/: hw3.cpp  hw3.h  main.cpp
ceng242/HW1/: HW1.hs
ceng242/HW2/: HW2.hs  Pprint.hs
ceng242/HW3/: Test  account_test.cpp
ceng242/HW4/: tester.cpp
ceng242/MINIHW1-Haskell/: Mini1.hs
ceng242/MINIHW2-C++/: Book.cpp  HardCopy.cpp  SoftCopy.cpp  TestGroup1.cpp  TestGroup2.cpp  main.cpp
ceng242/MINIHW3-Prolog/: hw.pl
ceng315/: graph.cpp
ceng336/THE1/: the_1_2237790.asm
ceng336/THE2/: the2_group_9.asm
ceng350/: ExtInterfacesClassDiagram.mdj  Func1ActivityDiagram.mdj  Func2ActivityDiagram.mdj  LogicalDBClassDiagram.mdj  UseCaseDiagram.mdj
ceng350/srs-group20/: 7UseCaseDiagram.mdj  ExtInterfacesClassDiagram.mdj  Func1ActivityDiagram.mdj  Func2ActivityDiagram.mdj  LogicalDBClassDiagram.mdj
ceng351/PA1/: BOOKDB.java
ceng351/PA2/: Bucket.java  LabDB.java
ceng352/writtenAssignment1/: FDqueries.sql  e2237790.sql
ceng435/THE3/: 2237790_icmp3200.pcap  2237790_icmp92.pcap  e2237790-capture1.pcap  unis.txt  (+1 more)
ceng443/: oop
ceng477/hw2/: CMakeLists.txt  Makefile  integrator.cpp  integrator.h  jpeg.cpp  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  parser.cpp  raytracer  read  rotation.cpp  rotation.h  scaling.cpp  scaling.h  scene.cpp  sphere.cpp  sphere.h  transformation.cpp  transformation.h  translation.cpp  translation.h  triangle.h  vector4f.h
ceng477/hw2/Code Template/raytracer/: parser.h  raytracer.h
ceng477/hw2/sample_main_files/: main_for_jpeg_to_ppm.cpp  main_for_matrix_inversion.cpp  main_for_write_jpeg_file.cpp
(+97 files in other folders)
